--- a/travis.yml
+++ b/travis.yml
@@ -1,1 +1,12 @@
-
+language: node_js
+node_js:
+  - "8"
+cache:
+  directories:
+    - "node_modules"
+before_script:
+  - npm run pre-start-webdriver
+  - npm run start-webdriver &
+  - appium &
+srcipt:
+  - protractor config/protractor.conf.ts
