--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ cache:
   directories:
     - "node_modules"
 before_script:
-  - npm run pre-start-webdriver
+  - npm i
+  - npm run pre-start-webdriver &
   - npm run start-webdriver &
   - appium &
 srcipt:
