--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npm i -g appium ts-node typescript tslint node-gyp",
+    "preinstall": "npm i -g ts-node typescript tslint node-gyp protractor",
     "appium": "appium",
     "check": "tslint -c tslint.json -p tsconfig.json 'test/**/*.ts'",
     "test": "npm run check && protractor config/protractor.conf.ts",
